fix grid card gap and add hover effect on btn-primary

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,9 @@
   padding: 0.5rem 1.75rem;
   transition: all 0.3s ease-in-out;
 }
+.btn-primary:hover{
+  background-color: rgb(235, 37, 2);
+}
 .btn-secondary {
   border: solid 1px #0a0a0a;
   color: #0a0a0a;
